--- a/main.css
+++ b/main.css
@@ -1,20 +1,25 @@
 body {
   background: #004b59 url("background.png");
   background-repeat: repeat-x;
-  background-attachment: fixed;
 
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12pt;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 130%;
   color: #eee;
   text-align: center;
 }
 
+h1 {
+  font-size: 225%;
+  margin: 10px 0;
+}
+
+
 #content {
-  margin-top: 75px;
+  margin-top: 50px;
 }
 
 #presentation {
-  width: 500px;
+  max-width: 650px;
   margin: 30px auto;
   line-height: 1.75em;
 }
@@ -38,13 +43,13 @@ a.project {
   width: 160px;
   height: 50px;
   border: 1px solid #eee;
-  padding: 158px 9px 9px 9px;
+  padding: 158px 9px 16px 9px;
   margin: 10px;
   text-decoration: none;
   text-align: center;
   line-height: 1.5em;
   position: relative;
-  font-size: 12pt;
+  font-size: 90%;
 }
 
 a .img-container {
@@ -60,3 +65,6 @@ a img {
   height: 128px;
 }
 
+.contact {
+  font-size: 90%;
+}
