--- a/main.css
+++ b/main.css
@@ -9,10 +9,9 @@ body {
 }
 
 h1 {
-  font-size: 225%;
-  margin: 10px 0;
+  font-size: 180%;
+  margin: 0 auto;
 }
-
 
 #content {
   margin-top: 50px;
@@ -33,7 +32,7 @@ a {
 }
 
 #projects {
-  width: 600px;
+  width: 800px;
   margin: 0 auto;
   text-align: left;
 }
