--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,4 +6,25 @@ layout: default
 <p>{{ page.date | date_to_string }}{% if page.author %} - {{ page.author }}{% endif %}</p>
 
 {{ content }}
+
+<div class="post-comments">
+    {% if page.comments %}
+        <div id="disqus_thread"></div>
+<script>
+
+var disqus_config = function () {
+    this.page.url = '{{ site.url }}{{ page.url }}';
+    this.page.identifier = '{{ page.url }}';
+};
+
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://tuzepoito-blog.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    {% endif %}
+</div>
 </article>
